--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,7 +1,8 @@
 <header>
-    <h1>Home</h1>
+    <h1>{{title}}</h1>
     
     <a href="/home">Home</a>
-    <a href="/exportlist">exports list</a>
+    <a href="/exports">exports list</a>
     <a href="/exporters">exporters list</a>
+    <a href="/users/logout">logout</a>
 </header>
