--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
-    <link href="/assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>{{title}}</title>
 </head>
 <body>
-{{>header}}
+{{>sidebar}}
     <div id="main">
         <p id="para"></p>
     </div>
